# PRISM-Probing-Retrieval-Inadequacy-via-Structural-Mismatch

./: .env.example  .gitignore  AGENTS.md  CODEX_TASKS.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  PRISM_10_day_plan.md  PROCESS_GUIDE_2026-04-12_1840_DEMO.md  PROCESS_GUIDE_2026-04-12_1850_ANALYSIS.md  PROCESS_GUIDE_2026-04-12_1915_EXTERNAL_BENCHMARK.md  PROCESS_GUIDE_2026-04-15_1328_FAILURE_ANALYSIS.md  PROCESS_GUIDE_2026-04-15_1616_GENERALIZATION_V2.md  PROCESS_GUIDE_2026-04-15_2341_PUBLIC_GRAPH.md  PROCESS_GUIDE_2026-04-20_2054_HUMAN_EVAL.md  PROCESS_GUIDE_2026-04-21_1751_REAL_HUMAN_EVAL.md  PROCESS_GUIDE_2026-04-21_2158_LLM_EXPERIMENTS.md  PROCESS_GUIDE_2026-04-22_1332_RAS_V4.md  PROCESS_GUIDE_2026-04-22_1421_FINAL_RELEASE.md  PROCESS_GUIDE_2026-04-22_1907_RAS_UI_PRESENTATION.md  README.md  REPORT_COMPILE_NOTES.md  WORK_LOG_2026-04-11_2300_KG.md  WORK_LOG_2026-04-11_2355_HYBRID.md  WORK_LOG_2026-04-12_1915_EXTERNAL_BENCHMARK.md  WORK_LOG_2026-04-12_2020_DENSE_UPGRADE.md  WORK_LOG_2026-04-15_1328_FAILURE_ANALYSIS.md  WORK_LOG_2026-04-15_1529_ROUTER_BASELINES.md  WORK_LOG_2026-04-15_2311_PUBLIC_ROBUSTNESS.md  WORK_LOG_2026-04-15_2341_PUBLIC_GRAPH.md  WORK_LOG_2026-04-18_0810_CALIBRATION.md  WORK_LOG_2026-04-21_1647_COMPARATIVE_HUMAN_EVAL.md  WORK_LOG_2026-04-21_2158_LLM_EXPERIMENTS.md  WORK_LOG_2026-04-21_2245_OPEN_WORKSPACE.md  WORK_LOG_2026-04-21_2311_RAS_V3.md  WORK_LOG_2026-04-22_1332_RAS_V4.md  WORK_LOG_2026-04-22_1546_UI_POLISH.md  WORK_LOG_2026-04-22_1629_RAS_EXPLAINER.md  WORK_LOG_2026-04-22_1907_RAS_UI_PRESENTATION.md  WORK_LOG_2026-04-24_0016_FINAL_SYNTHESIS.md  (+1 more)
(+494 files in other folders)
