[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-rag"
version = "0.1.0"
description = "PRISM: Probing Retrieval Inadequacy via Structural Mismatch"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PRISM" }]
dependencies = ["faiss-cpu>=1.8", "matplotlib>=3.8", "networkx>=3.2", "numpy>=1.26", "rank-bm25>=0.2.2", "rdflib>=7.0", "sentence-transformers>=3.0", "streamlit>=1.35"]

[project.optional-dependencies]
dev = ["pytest>=8"]
dense = ["faiss-cpu>=1.8", "sentence-transformers>=3.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
